--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "heroku": "^7.56.1",
     "i": "^0.3.6",
+    "jest": "^27.0.6",
     "node": "^16.5.0",
     "yarn": "^1.22.11"
   }
